--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "mkdir -p dist && elm make src/Main.elm --optimize --output=dist/elm.js && cp index.html dist && cp style.css dist"
+    "build": "mkdir -p dist && elm make post-app/Main.elm --optimize --output=dist/elm.js && cp index.html dist && cp style.css dist"
   }
 }
